k8s-manifest/app/fastapi_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  ingressClassName: traefik
  rules:
  - host: local.dev
    http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
